--- a/index.Rmd
+++ b/index.Rmd
@@ -14,8 +14,14 @@ github-repo: rstudio/bookdown-demo
 ---
 
 
-Basic Probability Concepts
-==========================
+# Basic Probability Concepts
+
+
+## Random Variables
+
+
+
+
 
 ::: {.definition}
 *Let $S$ be the sample space of an experiment. A
@@ -56,8 +62,42 @@ $$F(x) = \int_{-\infty}^x f(y)\, dy$$ Then the function $f$ is called
 the **probability density function** (p.d.f) of a random variable $X$.*
 :::
 
-Expectation
------------
+### R Functions for Probability Distributions
+
+In R, density, distribution function, for the Poisson distribution with parameter $\lambda$ is shown as follows:
+
+Distribution |	Density function: $P(X = x)$ |	Distribution function: $P(X ≤ x)$ | Quantile function (inverse c.d.f.)  | random generation
+-------------| ----------------------- | ------------------------  | ----------------------- | ------------------------
+Poisson |  `dpois(x, lambda, log = FALSE)` |  `ppois(q, lambda, lower.tail = TRUE, log.p = FALSE)` |  `qpois(p, lambda, lower.tail = TRUE, log.p = FALSE)` | `rpois(n, lambda)`
+
+For the binomial distribution, these functions are pbinom, qbinom, dbinom, and rbinom. For the normal distribution, these functions are pnorm, qnorm, dnorm, and rnorm. And so forth.
+
+
+```{r eval = TRUE}
+library(ggplot2)
+x <- 0:20
+myData <- data.frame( k = factor(x), pK = dbinom(x, 20, .5))
+ggplot(myData,aes(k,ymin=0,ymax=pK)) + 
+  geom_linerange() + ylab("p(k)") +
+  scale_x_discrete(breaks=seq(0,20,5)) +   
+  ggtitle("p.m.f of binomial distribution")
+```
+
+To plot continuous probability distribution in R, we use stat_function to add the density function as its arguement. To specify a different mean or standard deviation, we use the `args` parameter to supply new values.
+
+
+```{r}
+library(ggplot2)
+df <- data.frame(x=seq(-10,10,by=0.1))
+ggplot(df) + 
+    stat_function(aes(x),fun=dnorm, args = list(mean = 0, sd = 1))  + 
+    labs(x = "x", y = "f(x)", 
+       title = "Normal Distribution With Mean = 0 & SD = 1") 
+```
+
+
+## Expectation
+
 
 ::: {.definition}
 *The **expected value** of a discrete random variable
@@ -74,7 +114,7 @@ then $\displaystyle \sum_{x \in A} x f(x)$ is nothing but the weighted
 average of $X$.
 
 ::: {.theorem}
-**Theorem 1**. *Let $X$ be a discrete random variable with set of
+*Let $X$ be a discrete random variable with set of
 possible values $A$ and probability mass function $f(x)$, and let $g$ be
 a real-valued function. Then $g(X)$ is a random variable with
 $$\mathrm{E}[g(X)] = \sum_{x \in A} g(x) f(x)$$ *
@@ -87,14 +127,14 @@ defined by $$\mathrm{E}(X) = \int_{-\infty}^\infty x f(x)\, dx$$ *
 :::
 
 ::: {.theorem}
-**Theorem 2**. * Let $X$ be a continuous random variable with
+* Let $X$ be a continuous random variable with
 probability density function $f (x)$; then for any function
 $h: \mathbb{R} \rightarrow  \mathbb{R}$,
 $$\mathrm{E}[h(X)] = \int_{-\infty}^\infty h(x)\, f(x)\, dx$$ *
 :::
 
 ::: {.theorem}
-**Theorem 3**. *Let $X$ be a random variable. Let
+*Let $X$ be a random variable. Let
 $h_1, h_2, . . . , h_n$ be real-valued functions, and
 $a_1, a_2, \ldots, a_n$ be real numbers. Then
 $$\mathrm{E}[a_1 h_1(X) + a_2 h_2(X) + \cdots + a_n h_n(X)] = a_1 \mathrm{E}[h_1(X)] + a_2 \mathrm{E}[h_2(X)] + \ldots +
@@ -104,8 +144,7 @@ $$\mathrm{E}[a_1 h_1(X) + a_2 h_2(X) + \cdots + a_n h_n(X)] = a_1 \mathrm{E}[h_1
 Moreover, if $a$ and $b$ are constants, then
 $$\mathrm{E}(aX +b) = a\mathrm{E}(x) + b$$
 
-Variances of Random Variables
------------------------------
+## Variances of Random Variables
 
 ::: {.definition}
 *Let $X$ be a discrete random variable with a set of
@@ -131,8 +170,7 @@ $$\mathrm{Var}(x) = \mathrm{E}(X^2) - (\mathrm{E}(x))^2 ,$$
 $$\mathrm{Var}(aX + b) = a^2\ Var(X), \quad   \sigma_{aX + b}= |a|\sigma_X$$
 where $a$ and $b$ are constants.
 
-Moments and Moment Generating Function
---------------------------------------
+## Moments and Moment Generating Function
 
 ::: {.definition}
 *For $r > 0$, the $r$th moment of $X$ (the $r$th
@@ -153,10 +191,89 @@ $$\frac{\mathrm{E}[(X - \mathrm{E}[X])^3]}{(\mathrm{Var}[X])^{3/2}}.$$ *
 $$\frac{\mathrm{E}[(X - \mathrm{E}[X])^4]}{(\mathrm{Var}[X])^{4/2}}.$$ *
 :::
 
+
+**Note** In the formula, subtract from the mean and normalise or divide by the standard deviation center and scale to the standard values. Odd-order moments are increased if there is a long tail to the right and decreased if there is a long tail to the left, while even-order moments are increased if either tail is long. A negative value of the coefficient of skewness that the distribution is skewed to the left, or negatively skewed, meaning that the deviations above the mean tend to be smaller than the deviations below the mean, and vice versa. If the coefficent of skewness is close to zero, this could mean symmetry,
+
+**Note** The fourth moment measures the fatness in the tails, which is always positive. The kurtosis of the standard normal distribution is 3. Using the standard normal distribution as a benchmark, the excess kurtosis of a random variable is defined as the kurtosis minus 3. A higher kurtosis corresponds to a larger extremity of deviations (or outliers), which is called excess kurtosis.
+
+
+The following diagram compares the shape between the normal distribution and Student's t-distribution. Note that to use the legend with the  `stat_function` in ggplot2, we use `scale_colour_manual` along with `colour = ` inside the `aes()` as shown below and give names for specific density plots. 
+
+
+
+
+```{r}
+library(ggplot2)
+df <- data.frame(x=seq(-10,10,by=0.1))
+ggplot(df) + 
+    stat_function(aes(x, colour = "dnorm"),fun = dnorm, args = list(mean = 0, sd = 1))  + 
+    stat_function(aes(x, colour ="dt"),fun = dt, args = list(df = 4)) +
+     scale_colour_manual("Legend title", values = c("black", "blue")) + 
+    labs(x = "x", y = "f(x)", 
+       title = "Normal Distribution With Mean = 0 & SD = 1") + 
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+
+
+Next we will simulate 10000 samples from a normal distribution with mean 0, and standard deviation 1, then compute and interpret for the skewness and kurtosis, and plot the histogram. Here we also use
+the function `set.seed()` to set the seed of R's random number generator, this is useful for creating simulations or random objects that can be reproduced.
+
+
+```{r}
+set.seed(15) # Set the seed of R's random number generator
+
+#Simulation
+n.sample <- rnorm(n = 10000, mean = 0, sd = 1)
+
+#Skewness and Kurtosis
+library(moments)
+skewness(n.sample)
+kurtosis(n.sample)
+ggplot(data.frame(x = n.sample),aes(x)) + 
+  geom_histogram(binwidth = 0.5)
+```
+
+```{r}
+set.seed(15)
+
+#Simulation
+t.sample <- rt(n = 10000, df = 5)
+
+#Skewness and Kurtosis
+library(moments)
+skewness(t.sample)
+kurtosis(t.sample)
+
+ggplot(data.frame(x = t.sample),aes(x)) + geom_histogram(binwidth = 0.5)
+
+```
+
+**Example** Let us count the number of samples greater than 5 from the samples of the normal and Student's t distributions. Comment on your results
+
+```{r, include=FALSE}
+tutorial::go_interactive()
+```
+
+<script src=https://cdn.datacamp.com/datacamp-light-latest.min.js></script>
+
+
+```{r}
+# Write your code here
+set.seed(15)
+n.sample <- rnorm(n = 10000, mean = 0, sd = 1)
+t.sample <- rt(n = 10000, df = 5)
+
+
+
+```
+
+
+
 ::: {.definition}
-* The moment generating function (mgf) of a random
+*The moment generating function (mgf) of a random
 variable $X$ is defined to be $$M_X(t) = E[e^{tX}],$$ if the expectation
-exists. *
+exists.* 
 :::
 
 **Note** The moment generating function of $X$ may not defined (may not
@@ -168,11 +285,18 @@ $t = 0$, with $$M^{(k)}_X (0) = \mathrm{E}[X^k],$$ with
 $\mathrm{E}[|X|^k]$ finite. We can obtain the moments by succesive
 differentiation of $M_X(t)$ and letting $t = 0$.
 
-Probability generating function
--------------------------------
+
+::: {.example}
+Derive the formula for the mgf of the standard normal distribution.
+Hint: its mgf is $e^{\f t^2}$. 
+:::
+
+
+## Probability generating function
+
 
 ::: {.definition}
-* For a counting variable $N$ (a variable which
+*For a counting variable $N$ (a variable which
 assumes some or all of the values $0, 1, 2, \ldots,$ but no others), The
 probability generating function of $N$ is $$G_N(t) = E[t^N],$$ for those
 $t$ in $\mathbb{R}$ for which the series converges absolutely. *
@@ -186,8 +310,7 @@ $$\mathrm{Var}[N] = G''_N(1) + G'_N(1) - (G'_N(1))^2.$$ Moreover, when
 both pgf and mgf of $N$ are defined, we have
 $$G_N(t) = M_N(\log(t)) \quad \text{ and } M_N(t) = G_N(e^t).$$
 
-Multivariate Distributions
---------------------------
+## Multivariate Distributions
 
 When $X_1,X_2,\ldots ,X_n$ be random variables defined on the same
 sample space, a multivariate probability density function or probability
@@ -215,14 +338,19 @@ $$P(Y \in B) = \int_B f_Y(y) \, dy,$$ and on the other hand, we also
 have
 $$P(Y \in B) = P(X \in (-\infty, \infty), Y \in B) = \int_B \left(    \int_{-\infty}^\infty f(x,y)\, dx  \right) \, dy.$$
 
-We have $$\label{mar1}  f_Y(y) =   \int_{-\infty}^\infty f(x,y)\, dx$$
-and $$\label{mar2}  f_X(x) =   \int_{-\infty}^\infty f(x,y)\, dy$$
+We have 
+\begin{equation} 
+(\#eq:label) f_Y(y) =   \int_{-\infty}^\infty f(x,y)\, dx
+\end{equation}
+and 
+\begin{equation} 
+(\#eq:label2)  f_X(x) =   \int_{-\infty}^\infty f(x,y)\, dy
+\end{equation}
 
 ::: {.definition}
 *Let $X$ and $Y$ have joint probability density
-function $f (x, y)$; then the functions $f_X$ and $f_Y$ in
-[\[mar2\]](#mar2){reference-type="eqref" reference="mar2"} and
-[\[mar1\]](#mar1){reference-type="eqref" reference="mar1"} are called,
+function $f (x, y)$; then the functions $f_X$ and $f_Y$ in* \@ref(eq:label) and \@ref(eq:label2)
+*are called,
 respectively, the **marginal probability density functions** of $X$ and
 $Y$ .*
 :::
@@ -232,6 +360,8 @@ mixed). The **joint probability distribution function**, or **joint
 cumulative probability distribution function**, or simply the joint
 distribution of $X$ and $Y$, is defined by
 $$F(t, u) = P(X \le t, Y \le u)$$ for all $t, u \in (-\infty, \infty)$.
+
+
 
 The marginal probability distribution function of $X$, $F_X$, can be
 found from $F$ as follows:
@@ -245,7 +375,7 @@ We also have
 $$\mathrm{E}(X) =   \int_{-\infty}^\infty x f_X(x)\, dx , \quad \mathrm{E}(Y) =   \int_{-\infty}^\infty y f_Y(y)\, dy$$
 
 ::: {.theorem}
-**Theorem 4**. *Let $f (x, y)$ be the joint probability density function
+*Let $f (x, y)$ be the joint probability density function
 of random variables $X$ and $Y$. If $h$ is a function of two variables
 from $\mathbb{R}^2$ to $\mathbb{R}$, then $h(X, Y )$ is a random
 variable with the expected value given by
@@ -256,8 +386,8 @@ provided that the integral is absolutely convergent.*
 As a consequence of the above theorem, for random variables $X$ and $Y$,
 $$\mathrm{E}(X + Y) = \mathrm{E}(X) + \mathrm{E}(Y)$$
 
-Independent random variables
-----------------------------
+## Independent random variables
+
 
 ::: {.definition}
 *Two random variables $X$ and $Y$ are called
@@ -267,20 +397,20 @@ $$P(X \in A, Y \in B) = P(X \in A) P(Y \in B).$$*
 :::
 
 ::: {.theorem}
-**Theorem 5**. *Let $X$ and $Y$ be two random variables defined on the
+*Let $X$ and $Y$ be two random variables defined on the
 same sample space. If $F$ is the joint probability distribution function
 of $X$ and $Y$, then $X$ and $Y$ are independent if and only if for all
 real numbers $t$ and $u$, $$F(t,u)  = F_X(t) F_Y(u).$$*
 :::
 
 ::: {.theorem}
-**Theorem 6**. *Let $X$ and $Y$ be jointly continuous random variables
+*Let $X$ and $Y$ be jointly continuous random variables
 with joint probability density function $f (x, y)$. Then $X$ and $Y$ are
 independent if and only if $$f (x, y) = f_X(x) f_Y (y).$$*
 :::
 
 ::: {.theorem}
-**Theorem 7**. *Let $X$ and $Y$ be independent random variables and
+*Let $X$ and $Y$ be independent random variables and
 $g : \mathbb{R} \rightarrow\mathbb{R}$ and
 $h : \mathbb{R} \rightarrow\mathbb{R}$ be real-valued functions; then
 $g(X)$ and $h(Y )$ are also independent random variables.*
@@ -289,14 +419,14 @@ $g(X)$ and $h(Y )$ are also independent random variables.*
 As a consequence of the above theorem, we obtain
 
 ::: {.theorem}
-**Theorem 8**. *Let $X$ and $Y$ be independent random variables. Then
+*Let $X$ and $Y$ be independent random variables. Then
 for all real-value functions $g : \mathbb{R} \rightarrow\mathbb{R}$ and
 $h : \mathbb{R} \rightarrow\mathbb{R}$,
 $$\mathrm{E}[g(X)h(Y)] = \mathrm{E}[g(X)]\mathrm{E}[h(Y)]$$ *
 :::
 
-Conditional Distributions
--------------------------
+## Conditional Distributions
+
 
 Let $X$ and $Y$ be two continuous random variables with the joint
 probability density function $f (x, y)$. Note that the case of discrete
@@ -323,8 +453,8 @@ Note that if $X$ and $Y$ are independent, then $f_{X|Y}$ coincides with
 $f_X$ because
 $$f_{X|Y}(x|y) = \frac{f(x,y)}{f_Y(y)} =\frac{f_X(x)f_Y(y)}{f_Y(y)} = f_X(x).$$
 
-Covariance
-----------
+## Covariance
+
 
 The notion of the variance of a random variable $X$,
 $\mathrm{Var}(X) = \mathrm{E}[ ( X - \mathrm{E}(X))^2]$ measures the
@@ -375,8 +505,7 @@ If $X$ and $Y$ are independent, then $$\mathrm{Cov}(X,Y) = 0.$$ However,
 the converse of this is not true; that is, two dependent random
 variables might be uncorrelated.
 
-Correlation
------------
+## Correlation
 
 A large covariance can mean a strong relationship between variables.
 However, we cannot compare variances over data sets with different
@@ -424,8 +553,8 @@ parameters of the probability distribution. Various criteria are
 available, including the method of moments, the method of maximum
 likelihood, etc.
 
-The method of moments
----------------------
+## The method of moments
+
 
 The method of moments leads to parameter estimates by simply matching
 the moments of the model,
@@ -443,8 +572,7 @@ An estimate produced using the method of moments is called an MME, and
 the MME of a parameter $\theta$, say, is usually denoted
 $\tilde{\theta}$.
 
-The method of maximum likelihood
---------------------------------
+## The method of maximum likelihood
 
 The method of maximum likelihood is the most widely used method for
 parameter estimation. The estimates it produces are those values of the
@@ -475,31 +603,31 @@ include the following:
 ## Goodness of fit tests
 
 We can assess how well the fitted distributions reflect the distribution
-of the data in various ways.We should, of course, examine and compare
+of the data in various ways. We should, of course, examine and compare
 the tables of frequencies and, if appropriate, plot and compare
 empirical distribution functions. More formally, we can perform certain
 statistical tests. Here we will use the Pearson chi-square
 goodness-of-fit criterion.
 
-the Pearson chi-square goodness-of-fit criterion
-------------------------------------------------
+## the Pearson chi-square goodness-of-fit criterion
+
 
 We construct the test statistic $$\chi^2 = \frac{\sum(O - E)^2}{E},$$
 where $O$ is the observed frequency in a cell in the frequency table and
 $E$ is the fitted or expected frequency (the frequency expected in that
 cell under the fitted model), and where we sum over all usable cells.
 
-The null hypothesis is that the sample comes from a specified
+**The null hypothesis** is that the sample comes from a specified
 distribution.
 
 The value of the test statistic is then evaluated in one of two ways.
 
 1.  We convert it to a $P$-value, which is a measure of the strength of
     the evidence against the hypothesis that the data do follow the
-    fitted distribution. If the $P$-value is small enough, we conclude
+    fitted distribution. **If the $P$-value is small enough, we conclude
     that the data do not follow the fitted distribution -- we say "the
     fitted distribution does not provide a good fit to the data" (and
-    quote the $P$-value in support of this conclusion).
+    quote the $P$-value in support of this conclusion)**.
 
 2.  We compare it with values in published tables of the distribution
     function of the appropriate $\chi^2$ distribution, and if the value
@@ -507,8 +635,7 @@ The value of the test statistic is then evaluated in one of two ways.
     this reference distribution, we conclude that the fitted
     distribution does not provide a good fit to the data.
 
-Kolmogorov-Smirnov (K-S) test.
-------------------------------
+## Kolmogorov-Smirnov (K-S) test.
 
 The K-S test statistic is the maximum difference between the values of
 the ecdf of the sample and the cdf of the fully specified fitted
@@ -516,6 +643,3 @@ distribution.
 
 The course does not emphasis on the Goodness of Fit Test. Please refer
 to the reference text for more details.
-
-
-
